--- a/Css/style.scss
+++ b/Css/style.scss
@@ -16,8 +16,9 @@ $mainfont: 'Grand Hotel', cursive;
     font-family: $textfont;
     font-weight: 700;
     border: none;
+    font-size: 1.5rem;
     border-radius: 3px;
-    padding: 7px 35px;
+    padding: 10px 40px;
 }
 
 * {
@@ -27,21 +28,576 @@ $mainfont: 'Grand Hotel', cursive;
     font-size: 10px;
 }
 
-@include home;
+.home {
+    width: 100%;
+    height: 100vh;
+    background-color: $greycolor;
 
-@include menu;
+    nav {
+        position: absolute;
+        @include flex;
+        width: 100%;
 
-@include oriental;
+        .logo {
+            width: 40%;
 
-@include statistics;
+            img {
+                width: 35%;
+                padding-left: 50px;
+            }
+        }
 
-@include chicken;
+        ul {
+            @include flex;
+            list-style: none;
+            padding: 20px;
+            align-items: center;
 
-@include senora;
+            li {
+                padding: 0 40px;
 
-@include subscriber;
+                a {
+                    text-decoration: none;
+                    color: #fff;
+                    font-size: 1.5rem;
+                }
+            }
+        }
 
-@include footer;
+        p {
+            padding: 20px;
+
+            .fa {
+                color: #fff;
+                font-size: 1.5rem;
+            }
+        }
+        button{
+            display: none;
+        }
+        
+    }
+
+    .image {
+        .one {
+            float: left;
+            width: 45%;
+
+            img {
+                width: 100%;
+                height: 100vh;
+            }
+        }
+
+        .two {
+            float: left;
+            width: 30%;
+
+            img {
+                width: 100%;
+                height: 100vh;
+                margin: -20px -180px;
+            }
+        }
+
+
+    }
+
+    .banner-text {
+        position: absolute;
+        top: 16%;
+        left: 46%;
+        right: 17%;
+
+        .vector {
+            :first-child {
+                width: 4%;
+                position: relative;
+                left: 35px;
+                top: -30px;
+            }
+
+            :nth-child(2) {
+                width: 11%;
+                position: relative;
+                top: 127px;
+                left: -117px;
+            }
+
+            :nth-child(3) {
+                width: 3%;
+                position: relative;
+                top: 485px;
+                right: -500px;
+            }
+
+            :nth-child(4) {
+                width: 8%;
+                position: relative;
+                top: 205px;
+                left: 605px;
+            }
+
+            :nth-child(5) {
+                width: 16%;
+                position: relative;
+                top: 15px;
+                left: 380px;
+            }
+
+            :nth-child(6) {
+                width: 17%;
+                position: relative;
+                top: 440px;
+                right: 10px;
+            }
+
+            :nth-child(7) {
+                width: 5%;
+                position: relative;
+                top: 360px;
+                left: -325px;
+            }
+
+            :nth-child(8) {
+                width: 5%;
+                position: relative;
+                top: 277px;
+                right: -30px;
+            }
+
+            :nth-child(9) {
+                width: 5%;
+                position: relative;
+                top: 75px;
+                left: 146px;
+            }
+        }
+
+        h1 {
+            font-family: $mainfont;
+            color: $yellcolor;
+            font-size: 9.5rem;
+            font-weight: 300;
+        }
+
+        p {
+            width: 115%;
+            color: #fff;
+            font-size: 2rem;
+            line-height: 30px;
+        }
+
+        button {
+            @include btn;
+            margin-top: 25px;
+        }
+    }
+}
+.menu-section {
+    width: 75%;
+    margin: 0 auto;
+    padding: 40px 0;
+
+    h1 {
+        font-family: $mainfont;
+        font-size: 7rem;
+        font-weight: 400;
+        text-align: center;
+    }
+
+    p {
+        font-size: 2rem;
+        text-align: center;
+        padding: 0 80px;
+    }
+
+    .img-section {
+        display: flex;
+        margin: 0 auto;
+
+        .menu {
+            width: 80%;
+            text-align: center;
+            padding: 60px 0;
+
+            img {
+                width: 50%;
+                border-radius: 50%;
+            }
+
+            h2 {
+                font-size: 5rem;
+                font-family: $mainfont;
+                padding: 5px 0;
+                font-weight: 400;
+            }
+
+            p {
+                font-size: 1.7rem;
+                padding: 0;
+            }
+        }
+    }
+}
+.oriantal {
+    overflow: hidden;
+
+    img {
+        width: 73%;
+        rotate: 90deg;
+        margin-top: -400px;
+        margin-left: 180px;
+    }
+
+    .section {
+        @include flex;
+        width: 80%;
+        margin: 0 auto;
+        margin-top: -1380px;
+
+        .left {
+            width: 48%;
+
+            img {
+                border-radius: 50%;
+                margin-left: -50px;
+                margin-top: -90px;
+            }
+        }
+
+        .text {
+            width: 48%;
+            z-index: 1;
+
+            h1 {
+                font-family: $mainfont;
+                color: $yellcolor;
+                font-size: 7rem;
+                font-weight: 300;
+            }
+
+            p {
+                width: 115%;
+                color: #fff;
+                font-size: 2rem;
+                line-height: 30px;
+            }
+
+            button {
+                @include btn;
+                margin-top: 25px;
+            }
+        }
+    }
+}
+
+.statistic-section {
+    margin: 0 auto;
+    padding: 25px 0;
+    text-align: center;
+    background-color: $greycolor;
+
+    .vector {
+        position: relative;
+        left: -120px;
+
+        :first-child {
+            width: 2%;
+            position: relative;
+            left: -25px;
+            top: -33px;
+        }
+
+        :nth-child(2) {
+            width: 4%;
+            position: relative;
+            top: 109px;
+            left: -265px;
+        }
+
+        :nth-child(3) {
+            width: 1%;
+            position: relative;
+            top: 190px;
+            left: -115px;
+        }
+
+        :nth-child(4) {
+            width: 3%;
+            position: relative;
+            top: 131px;
+            left: 757px;
+        }
+
+        :nth-child(5) {
+            width: 7%;
+            position: relative;
+            top: 20px;
+            left: 350px;
+        }
+
+        :nth-child(6) {
+            width: 5%;
+            position: relative;
+            top: -16px;
+        }
+    }
+
+    h1 {
+        font-family: $mainfont;
+        color: $yellcolor;
+        font-size: 7rem;
+        font-weight: 300;
+    }
+
+    p {
+        color: #fff;
+        font-size: 2rem;
+        line-height: 30px;
+    }
+
+    .info {
+        @include flex;
+        width: 80%;
+        margin: 0 auto;
+        padding: 50px 0;
+
+        .round {
+            border: 3px solid #fff;
+            border-radius: 50%;
+            padding: 32px 35px;
+
+            h1 {
+                font-family: $textfont;
+                color: $yellcolor;
+                font-size: 3.5rem;
+                font-weight: 600;
+            }
+
+            p {
+                color: #fff;
+                font-size: 1.2rem;
+                line-height: 20px;
+                font-weight: 600;
+            }
+        }
+    }
+}
+
+.chicken-section {
+    overflow: hidden;
+
+    img {
+        width: 73%;
+        rotate: 270deg;
+        margin-top: -1035px;
+        margin-left: 153px;
+    }
+
+    .section {
+        @include flex;
+        width: 80%;
+        margin: 0 auto;
+        margin-top: -910px;
+        align-items: center;
+        padding-bottom: 55px;
+
+        .text {
+
+            width: 48%;
+            z-index: 1;
+
+            h1 {
+                font-family: $mainfont;
+                color: $yellcolor;
+                font-size: 7rem;
+                font-weight: 300;
+            }
+
+            p {
+                width: 115%;
+                color: #fff;
+                font-size: 2rem;
+                line-height: 30px;
+            }
+
+            button {
+                @include btn;
+                margin-top: 25px;
+            }
+        }
+
+        .right {
+            width: 48%;
+            margin-right: -50px;
+
+            img {
+                border-radius: 50%;
+                margin-top: 15px;
+            }
+        }
+    }
+}
+.senora-fields {
+    padding: 190px 0;
+    width: 100%;
+    background-image: linear-gradient(rgb(255 204 0 / 82%) 0%, rgb(255 204 0 / 82%) 100%), url(../Images/banner.png);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+
+    p {
+        font-size: 2rem;
+        line-height: 30px;
+        padding: 32px 265px;
+    }
+
+    h1 {
+        font-family: $mainfont;
+        font-size: 7rem;
+        font-weight: 300;
+    }
+}
+
+.subscribe-section{
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 50px 0;
+    
+    .vector {
+        position: relative;
+        left: -120px;
+
+        :first-child {
+            width: 2%;
+            position: relative;
+            left: -25px;
+            top: -33px;
+        }
+
+        :nth-child(2) {
+            width: 4%;
+            position: relative;
+            top: 109px;
+            left: -245px;
+        }
+
+        :nth-child(3) {
+            width: 2%;
+            position: relative;
+            top: 329px;
+            left: -28px;
+        }
+
+        :nth-child(4) {
+            width: 3%;
+            position: relative;
+            top: 205px;
+            left: 517px;
+        }
+
+        :nth-child(5) {
+            width: 7%;
+            position: relative;
+            top: 20px;
+            left: 350px;
+        }
+
+        :nth-child(6) {
+            width: 5%;
+            position: relative;
+            top: -16px;
+        }
+    }
+    p {
+        font-size: 2rem;
+        line-height: 30px;
+        padding: 25px 140px;
+    }
+
+    h1 {
+        font-family: $mainfont;
+        font-size: 7rem;
+        font-weight: 300;
+    }
+    input{
+        width: 270px;
+    padding: 10px 0 10px 15px;
+    font-weight: 400;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 50px;
+    margin-top: 35px;
+    font-size: 1.2rem;
+    border: 0;
+    outline: 0;
+    }
+    label{
+        display: inline-block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    margin-left: -3px;
+    box-shadow: rgba(0, 0, 0, 0.35) 8px 5px 50px;
+    padding: 12px 25px;
+    background: #ffc200;
+    font-weight: 600;
+    }
+}
+
+footer {
+    background-color: $greycolor;
+    margin-top: 60px;
+
+    .big-wrapper {
+        @include flex;
+        width: 80%;
+        margin: 0 auto;
+        padding: 130px 0;
+        color: #fff;
+
+        .left {
+            width: 30%;
+
+            h2 {
+                font-size: 2rem;
+            }
+
+            p {
+                padding: 20px 0;
+                font-size: 1.3rem;
+            }
+
+            span {
+                background-color: #fff;
+                padding: 10px;
+                width: 5%;
+                margin: 5px 6px;
+                font-size: 2rem;
+                border-radius: 50%;
+                color: $greycolor;
+            }
+        }
+
+        .right {
+            width: 68%;
+            @include flex;
+            justify-content: space-evenly;
+
+            .about {
+                h2 {
+                    padding-bottom: 10px;
+                    font-size: 2rem;
+                }
+
+                p {
+                    padding: 3px 0;
+                    font-size: 1.3rem;
+                }
+            }
+        }
+    }
+}
 
 
 
