--- a/Css/phone.css
+++ b/Css/phone.css
@@ -3,12 +3,18 @@
     height: 100vh;
   }
   .home nav ul {
-    float: right;
+    background-color: #ffc200;
     display: none;
+    width: 50%;
+    z-index: 1;
+    height: 100vh;
+    transition: all 0.3s ease-in-out;
   }
   .home nav ul li {
     padding: 5px;
-    float: left;
+    text-align: center;
+    padding: 15px 0;
+    transition: all 0.3s ease-in-out;
   }
   .home nav p {
     float: right;
@@ -24,6 +30,7 @@
     display: block;
     position: absolute;
     right: 17px;
+    z-index: 1;
   }
   .home nav button {
     display: block;
